<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_title"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/main_100"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_name"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/main_30"
        android:layout_marginStart="4dp"
        app:layout_constraintLeft_toRightOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"/>
    <TextView
        android:id="@+id/detailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test_detailText"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/main_60"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/value"
        android:layout_marginTop="3dp"/>
    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_value"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/main_100"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/detailText"/>

</androidx.constraintlayout.widget.ConstraintLayout>