<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/rounded_back_20">

    <ImageView
        android:id="@+id/icon_img"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/rounded_back_10"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/icon_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/icon_img"
        app:layout_constraintRight_toRightOf="@id/icon_img"
        app:layout_constraintTop_toTopOf="@id/icon_img"
        app:layout_constraintBottom_toBottomOf="@id/icon_img"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textSize="14sp"
        android:textColor="@color/main_100"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toLeftOf="@id/price_tv"
        app:layout_constraintLeft_toRightOf="@id/icon_img"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_price"
        android:textSize="20sp"
        android:textColor="@color/main_100"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/star_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star"
        android:layout_marginBottom="2dp"
        app:layout_constraintLeft_toLeftOf="@id/name_tv"
        app:layout_constraintBottom_toBottomOf="@id/icon_img"/>

    <TextView
        android:id="@+id/rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_rating"
        android:textSize="12sp"
        android:textColor="@color/main_100"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="4dp"
        app:layout_constraintLeft_toRightOf="@id/star_iv"
        app:layout_constraintBottom_toBottomOf="@id/icon_img"/>

</androidx.constraintlayout.widget.ConstraintLayout>