<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_06"
    tools:context=".presentation.view.CalculatorFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/block_nsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calculate_cv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_osago"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/myCoefficient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/white_100"
                app:cardElevation="0dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@id/title_txt"
                app:layout_constraintBottom_toTopOf="@id/input_rv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/expand_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/calculator_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calculator"
                        android:background="@drawable/rounded_back_12"
                        android:padding="10dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="@id/myCoefficient_tv"
                        app:layout_constraintBottom_toBottomOf="@id/coefficientValue"/>

                    <TextView
                        android:id="@+id/myCoefficient_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_odds"
                        android:layout_marginStart="12dp"
                        android:textColor="@color/main_30"
                        app:layout_constraintLeft_toRightOf="@id/calculator_img"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/coefficientValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/odds_value"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/sf_pro_semibold"
                        android:textColor="@color/blue_100"
                        app:layout_constraintTop_toBottomOf="@id/myCoefficient_tv"
                        app:layout_constraintLeft_toRightOf="@id/calculator_img"/>

                    <ImageView
                        android:id="@+id/expand_imgBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_expand_more_inactive"
                        android:padding="4dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/myCoefficient_tv"
                        app:layout_constraintBottom_toBottomOf="@id/coefficientValue"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/coefficient_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp"
                        android:visibility="gone"
                        android:overScrollMode="never"
                        android:clickable="false"
                        app:layout_constraintTop_toBottomOf="@id/coefficientValue"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/input_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="17dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/rounded_back_20"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/myCoefficient"
                app:layout_constraintRight_toLeftOf="parent"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/calculate_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white_100"
        app:cardElevation="0dp"
        app:contentPadding="16dp"
        app:contentPaddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calculate_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_osago"
            android:background="@drawable/btn_selector"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@drawable/btn_text_selector"
            android:paddingVertical="18dp"
            android:textAllCaps="false"
            android:enabled="false"
            style="?android:attr/borderlessButtonStyle"
            />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorSize="30dp"
            app:trackThickness="3dp"
            app:indicatorColor="@color/blue_100"
            app:trackColor="@color/blue_06"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"/>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>